<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fr3_calibration</name>
  <version>0.1.0</version>
  <description>Eye-in-hand and eye-on-base camera calibration for the Franka FR3 using easy_handeye2 and aruco_ros</description>
  <maintainer email="phanikiran1169@gmail.com">Phani Kiran V</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>aruco_ros</exec_depend>
  <exec_depend>aruco_msgs</exec_depend>
  <exec_depend>easy_handeye2</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
